--- a/exp1.html
+++ b/exp1.html
@@ -6,7 +6,10 @@
 	</head>
 
 	<body>
-		<img src = "clouds.png" , width = "300", height ="200">
+		<center>
+			<img src = "clouds.png" , width = "300", height ="200">
+		</center>
+		
 		<hr>
 		<p><a href= "https://chat.openai.com/?ref=munwalker.com">ChatGPT</a> is a link to ChatGPT login page.</p>
 		<h1>This is a Header</h1>
