--- a/exp 2/about_us.html
+++ b/exp 2/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>About Us</title>
     <style>
         /* Reset CSS */
@@ -26,7 +26,7 @@
         header {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+padding: 10px 0;
         }
 
         nav ul {
@@ -54,7 +54,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+padding: 10px 0;
             position: fixed;
             width: 100%;
             bottom: 0;
