--- a/exp 2/home_page.html
+++ b/exp 2/home_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Online Bus Ticket Booking</title>
 </head>
 <body style="background-color: #f2f2f2;">
@@ -16,14 +16,14 @@
         </nav>
     </header>
     <section id="banner" style="text-align: center;">
-        <img src="banner.jpg" alt="Banner Image" style="width: 100%; max-width: 800px; height: auto;">
+        <img src="banner.jpg" alt="Banner Image" style="width: 100%; height: auto;">
     </section>
-    <section id="contents" style="text-align: center; margin: 20px;">
+    <section id="contents" style="text-align: center;">
         <!-- Contents of the home page -->
         <h1>Welcome to Online Bus Ticket Booking</h1>
         <p>Find and book your bus tickets online.</p>
     </section>
-    <footer style="background-color: #333; color: #fff; text-align: center; padding: 10px 0; position: fixed; width: 100%; bottom: 0;">
+    <footer style="background-color: #333; color: #fff; text-align: center; position: fixed; width: 100%; bottom: 0;">
         <p>&copy; 2024 Online Bus Ticket Booking</p>
     </footer>
 </body>
