added confirmation page

--- a/exp 2/about_us.html
+++ b/exp 2/about_us.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
     <title>About Us</title>
     <style>
         /* Reset CSS */
@@ -73,7 +76,26 @@ padding: 10px 0;
     </header>
     <section id="about">
         <h1>About Us</h1>
-        <p>Information about the company...</p>
+        <p>Welcome to SpeedyBus, your reliable partner for hassle-free bus travel!
+           
+            <br><br>
+            Who We Are:
+            SpeedyBus is a leading online platform that simplifies the process of booking bus tickets, providing travelers with convenient access to a wide range of destinations.
+            <br>
+            Our Mission:
+            At SpeedyBus, our mission is to revolutionize the way people travel by bus. We aim to provide seamless booking experiences, ensure passenger safety, and deliver exceptional customer service at every step of the journey.
+            <br>
+            What We Offer:
+            <br>
+            Easy Booking: Our user-friendly website and mobile app make it simple to search, compare, and book bus tickets to destinations across the country.
+            Wide Coverage: With partnerships with numerous bus operators, we offer an extensive network of routes, connecting major cities, towns, and tourist destinations.
+            Flexible Options: From luxury coaches to budget-friendly options, travelers can choose from a variety of bus types, schedules, and seat preferences to suit their needs.
+            Secure Payments: We prioritize the security of our customers' transactions, offering multiple payment options and encrypted payment gateways for peace of mind.
+            Customer Support: Our dedicated customer support team is available 24/7 to assist with booking inquiries, ticket changes, and any other assistance needed before, during, or after the journey.
+            Our Commitment:
+            At SpeedyBus, we are committed to delivering a seamless and enjoyable travel experience for every passenger. Whether you're commuting for work, planning a weekend getaway, or embarking on a cross-country adventure, trust SpeedyBus to get you there safely, comfortably, and on time.
+            <br><br>
+            Thank you for choosing SpeedyBus for your travel needs!</p>
     </section>
     <footer>
         <p>&copy; 2024 Online Bus Ticket Booking</p>
