--- a/exp 2/about_us.html
+++ b/exp 2/about_us.html
@@ -9,50 +9,37 @@
     <title>About Us</title>
     <style>
         /* Reset CSS */
-        body,
-        h1,
-        h2,
-        h3,
-        p,
-        ul,
-        li {
+        body,h1,h2,h3,p,ul,li {
             margin: 0;
             padding: 0;
         }
-
         /* Global Styles */
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
         }
-
         header {
             background-color: #333;
             color: #fff;
 padding: 10px 0;
         }
-
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             text-align: center;
         }
-
         nav ul li {
             display: inline;
             margin-right: 20px;
         }
-
         nav ul li a {
             color: #fff;
             text-decoration: none;
         }
-
         section {
             margin: 20px;
         }
-
         footer {
             background-color: #333;
             color: #fff;
