--- a/exp4_practise/gradeandarray.html
+++ b/exp4_practise/gradeandarray.html
@@ -3,6 +3,7 @@
     <head>
         <title>javaScript</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
         <script>
             function sumsort()
